syntax = "proto3";

option go_package = "github.com/djedjethai/generation/api/v1/keyvalue";


service KeyValue {
	rpc Get(GetRequest) returns (GetResponse);
	rpc Put(PutRequest) returns (PutResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
	rpc GetKeys(GetKeysRequest) returns (GetKeysResponse);
	rpc GetKeysValuesStream(Empty) returns (stream GetRecords);
}

message Empty {}

message Records {
	string key = 1;
	string value = 2;
}

// dataStructure which will be save in the raftLogger(no other means)
message Record {
	bytes value = 1;
	uint64 offset = 2;
	uint64 term = 3;
	uint32 type = 4;
}

message GetRecords{
	Records records =1;
}

message GetRequest {
	string key = 1;
}

message GetResponse{
	string value = 1;
}

message GetKeysRequest{}

message GetKeysResponse{
	repeated string keys =1;
}

message PutRequest{
	Records records = 1;
}

message PutResponse{}

message DeleteRequest{
	string key = 1;
}

message DeleteResponse{}

// message PutError{
// 	Error put_error = 1;
// }

// message GetError{
// 	Error get_error = 1;
// }

// message DeleteError{
// 	Error delete_error = 1;
// }

// message Error{
// 	int32 code = 1;
// 	string description = 2;
// }




